<resources>
    <string name="app_name">Szlaki Turystyczne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="app_descripiton">"Szlaki Turystyczne" to aplikacja umożliwiająca odkrywanie różnorodnych szlaków turystycznych o różnym stopniu trudności, od łatwych spacerów po wymagające trasy górskie.</string>
    <string name="easy_tracks">SZLAKI ŁATWE</string>
    <string name="hard_tracks">SZLAKI TRUDNE</string>
    <string name="home">Home</string>
    <string name="trudne">Trudne</string>
    <string name="latwe">Łatwe</string>
</resources>