<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/description_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray"
            android:layout_margin="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/easy_tracks_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <ImageView
                            android:id="@+id/description_image_view"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:src="@drawable/track"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/description_text_view" />

                        <TextView
                            android:id="@+id/description_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/app_descripiton"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/description_image_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/easy_tracks_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintTop_toBottomOf="@+id/description_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/hard_tracks_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                        <ImageView
                            android:id="@+id/easy_tracks_image_view"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:src="@drawable/easytracks"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/easy_tracks_text_view" />

                        <TextView
                            android:id="@+id/easy_tracks_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/easy_tracks"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/easy_tracks_image_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                android:id="@+id/hard_tracks_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:layout_constraintTop_toBottomOf="@+id/easy_tracks_card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                                <ImageView
                                android:id="@+id/hard_tracks_image_view"
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:src="@drawable/hardtracks"
                                android:scaleType="centerCrop"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toTopOf="@+id/hard_tracks_text_view" />

                                <TextView
                                android:id="@+id/hard_tracks_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/hard_tracks"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                app:layout_constraintTop_toBottomOf="@+id/hard_tracks_image_view"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>